welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: identifier expected but ';' found.
var c:String=-;
              ^