welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
    
	while(estSurBiscuit!=true){
  	if(isFacingTrail()==true){
      avance()
      baisseBrosse()
      leveBrosse()
      
    }else{
      for( trace <- 0 to 3){
        if(isFacingTrail()!=true){
          droite()
        }
      }
  }  

  }
prendBiscuit()
}

var c:String=-;

var sol:Boolean=false;

def isFacingTrail():Boolean = {
      if(estFaceMur){
        sol=false
      }else{
        avance()
        getCouleurSol=c
        if (getCouleurSol()!=c){
          recule()
          sol=false
         
        }else{
          recule()
          sol=true
        }
      }
      

return sol
}